--- a/week9/package.json
+++ b/week9/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://eldow99.github.io/week9/",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy":"npm run buil",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
